--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <ul id="list-updated"></ul>
+    <ul id="surname-added"></ul>
+  </body>
   <script src="js/script.js"></script>
 </html>
